# supernote-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gui.py  pyproject.toml  run.py  settings.toml.example
supernote_viewer/: __init__.py  gui.py
